@@ -1,6 +1,6 @@
 package net.minecraft.world.entity.ai.behavior;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Predicate;
 import javax.annotation.Nullable;
@@ -18,7 +18,7 @@ import net.minecraft.world.entity.ai.util.LandRandomPos;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.phys.Vec3;
 
-public class AnimalPanic extends Behavior<PathfinderMob> {
+public class AnimalPanic<E extends PathfinderMob> extends Behavior<E> {
 	private static final int PANIC_MIN_DURATION = 100;
 	private static final int PANIC_MAX_DURATION = 120;
 	private static final int PANIC_DISTANCE_HORIZONTAL = 5;
@@ -27,38 +27,38 @@ public class AnimalPanic extends Behavior<PathfinderMob> {
 			|| pathfinderMob.isFreezing()
 			|| pathfinderMob.isOnFire();
 	private final float speedMultiplier;
-	private final Predicate<PathfinderMob> shouldPanic;
+	private final Predicate<E> shouldPanic;
 
 	public AnimalPanic(float f) {
-		this(f, DEFAULT_SHOULD_PANIC_PREDICATE);
+		this(f, DEFAULT_SHOULD_PANIC_PREDICATE::test);
 	}
 
-	public AnimalPanic(float f, Predicate<PathfinderMob> predicate) {
-		super(ImmutableMap.of(MemoryModuleType.IS_PANICKING, MemoryStatus.REGISTERED, MemoryModuleType.HURT_BY, MemoryStatus.REGISTERED), 100, 120);
+	public AnimalPanic(float f, Predicate<E> predicate) {
+		super(Map.of(MemoryModuleType.IS_PANICKING, MemoryStatus.REGISTERED, MemoryModuleType.HURT_BY, MemoryStatus.REGISTERED), 100, 120);
 		this.speedMultiplier = f;
 		this.shouldPanic = predicate;
 	}
 
-	protected boolean checkExtraStartConditions(ServerLevel serverLevel, PathfinderMob pathfinderMob) {
+	protected boolean checkExtraStartConditions(ServerLevel serverLevel, E pathfinderMob) {
 		return this.shouldPanic.test(pathfinderMob)
 			&& (pathfinderMob.getBrain().hasMemoryValue(MemoryModuleType.HURT_BY) || pathfinderMob.getBrain().hasMemoryValue(MemoryModuleType.IS_PANICKING));
 	}
 
-	protected boolean canStillUse(ServerLevel serverLevel, PathfinderMob pathfinderMob, long l) {
+	protected boolean canStillUse(ServerLevel serverLevel, E pathfinderMob, long l) {
 		return true;
 	}
 
-	protected void start(ServerLevel serverLevel, PathfinderMob pathfinderMob, long l) {
+	protected void start(ServerLevel serverLevel, E pathfinderMob, long l) {
 		pathfinderMob.getBrain().setMemory(MemoryModuleType.IS_PANICKING, true);
 		pathfinderMob.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
 	}
 
-	protected void stop(ServerLevel serverLevel, PathfinderMob pathfinderMob, long l) {
+	protected void stop(ServerLevel serverLevel, E pathfinderMob, long l) {
 		Brain<?> brain = pathfinderMob.getBrain();
 		brain.eraseMemory(MemoryModuleType.IS_PANICKING);
 	}
 
-	protected void tick(ServerLevel serverLevel, PathfinderMob pathfinderMob, long l) {
+	protected void tick(ServerLevel serverLevel, E pathfinderMob, long l) {
 		if (pathfinderMob.getNavigation().isDone()) {
 			Vec3 vec3 = this.getPanicPos(pathfinderMob, serverLevel);
 			if (vec3 != null) {
@@ -68,7 +68,7 @@ public class AnimalPanic extends Behavior<PathfinderMob> {
 	}
 
 	@Nullable
-	private Vec3 getPanicPos(PathfinderMob pathfinderMob, ServerLevel serverLevel) {
+	private Vec3 getPanicPos(E pathfinderMob, ServerLevel serverLevel) {
 		if (pathfinderMob.isOnFire()) {
 			Optional<Vec3> optional = this.lookForWater(serverLevel, pathfinderMob).map(Vec3::atBottomCenterOf);
 			if (optional.isPresent()) {
